--- a/clase 10/assets/css/style.css
+++ b/clase 10/assets/css/style.css
@@ -124,3 +124,39 @@ section a:active{
     }
     
 }
+
+
+
+.menu-container {
+    background-color: beige;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 50px;
+    padding-left: 10px;
+}
+.menu-container ul li{
+    display: inline-block;
+    padding: 5px;
+    
+}
+
+
+.menu-container ul a{
+     text-decoration: none;
+     display: inline-block;
+     height: 30px;
+     border-radius: 15px;
+     background-color: black;
+     color:white;
+     font-size: 1.2em;
+     width: 70px;
+}
+header img{
+    width: 100%;
+    height: 650px;
+}
+header nav{
+    position: sticky;
+    top: 0;
+}
